feat(api): add local subscription prototype
